describe as function instead of class

--- a/.gitignore
+++ b/.gitignore
@@ -2943,3 +2943,65 @@ venv/lib/python3.4/site-packages/six-1.11.0.dist-info/WHEEL
 venv/lib/python3.4/site-packages/six.py
 venv/pip-selfcheck.json
 venv/pyvenv.cfg
+venv/bin/tabulate
+venv/lib/python3.4/site-packages/__pycache__/tabulate.cpython-34.pyc
+venv/lib/python3.4/site-packages/tabulate-0.8.2-py3.4.egg-info/dependency_links.txt
+venv/lib/python3.4/site-packages/tabulate-0.8.2-py3.4.egg-info/entry_points.txt
+venv/lib/python3.4/site-packages/tabulate-0.8.2-py3.4.egg-info/installed-files.txt
+venv/lib/python3.4/site-packages/tabulate-0.8.2-py3.4.egg-info/PKG-INFO
+venv/lib/python3.4/site-packages/tabulate-0.8.2-py3.4.egg-info/requires.txt
+venv/lib/python3.4/site-packages/tabulate-0.8.2-py3.4.egg-info/SOURCES.txt
+venv/lib/python3.4/site-packages/tabulate-0.8.2-py3.4.egg-info/top_level.txt
+venv/lib/python3.4/site-packages/tabulate.py
+venv/lib/python3.4/site-packages/tests/__init__.py
+venv/lib/python3.4/site-packages/tests/__pycache__/__init__.cpython-34.pyc
+venv/lib/python3.4/site-packages/tests/__pycache__/bools_test.cpython-34.pyc
+venv/lib/python3.4/site-packages/tests/__pycache__/dates_test.cpython-34.pyc
+venv/lib/python3.4/site-packages/tests/__pycache__/enum_test.cpython-34.pyc
+venv/lib/python3.4/site-packages/tests/__pycache__/lists_test.cpython-34.pyc
+venv/lib/python3.4/site-packages/tests/__pycache__/math_test.cpython-34.pyc
+venv/lib/python3.4/site-packages/tests/__pycache__/objects_test.cpython-34.pyc
+venv/lib/python3.4/site-packages/tests/bools_test.py
+venv/lib/python3.4/site-packages/tests/dates_test.py
+venv/lib/python3.4/site-packages/tests/dicts/__init__.py
+venv/lib/python3.4/site-packages/tests/dicts/__pycache__/__init__.cpython-34.pyc
+venv/lib/python3.4/site-packages/tests/dicts/__pycache__/chained_dict_test.cpython-34.pyc
+venv/lib/python3.4/site-packages/tests/dicts/__pycache__/helpers_test.cpython-34.pyc
+venv/lib/python3.4/site-packages/tests/dicts/__pycache__/limited_dict_test.cpython-34.pyc
+venv/lib/python3.4/site-packages/tests/dicts/chained_dict_test.py
+venv/lib/python3.4/site-packages/tests/dicts/helpers_test.py
+venv/lib/python3.4/site-packages/tests/dicts/limited_dict_test.py
+venv/lib/python3.4/site-packages/tests/enum_test.py
+venv/lib/python3.4/site-packages/tests/lists_test.py
+venv/lib/python3.4/site-packages/tests/math_test.py
+venv/lib/python3.4/site-packages/tests/objects_test.py
+venv/lib/python3.4/site-packages/utils-0.9.0.dist-info/DESCRIPTION.rst
+venv/lib/python3.4/site-packages/utils-0.9.0.dist-info/INSTALLER
+venv/lib/python3.4/site-packages/utils-0.9.0.dist-info/LICENSE.txt
+venv/lib/python3.4/site-packages/utils-0.9.0.dist-info/METADATA
+venv/lib/python3.4/site-packages/utils-0.9.0.dist-info/metadata.json
+venv/lib/python3.4/site-packages/utils-0.9.0.dist-info/RECORD
+venv/lib/python3.4/site-packages/utils-0.9.0.dist-info/top_level.txt
+venv/lib/python3.4/site-packages/utils-0.9.0.dist-info/WHEEL
+venv/lib/python3.4/site-packages/utils/__init__.py
+venv/lib/python3.4/site-packages/utils/__pycache__/__init__.cpython-34.pyc
+venv/lib/python3.4/site-packages/utils/__pycache__/bools.cpython-34.pyc
+venv/lib/python3.4/site-packages/utils/__pycache__/dates.cpython-34.pyc
+venv/lib/python3.4/site-packages/utils/__pycache__/enum.cpython-34.pyc
+venv/lib/python3.4/site-packages/utils/__pycache__/lists.cpython-34.pyc
+venv/lib/python3.4/site-packages/utils/__pycache__/math.cpython-34.pyc
+venv/lib/python3.4/site-packages/utils/__pycache__/objects.cpython-34.pyc
+venv/lib/python3.4/site-packages/utils/bools.py
+venv/lib/python3.4/site-packages/utils/dates.py
+venv/lib/python3.4/site-packages/utils/dicts/__init__.py
+venv/lib/python3.4/site-packages/utils/dicts/__pycache__/__init__.cpython-34.pyc
+venv/lib/python3.4/site-packages/utils/dicts/__pycache__/chained_dict.cpython-34.pyc
+venv/lib/python3.4/site-packages/utils/dicts/__pycache__/helpers.cpython-34.pyc
+venv/lib/python3.4/site-packages/utils/dicts/__pycache__/limited_dict.cpython-34.pyc
+venv/lib/python3.4/site-packages/utils/dicts/chained_dict.py
+venv/lib/python3.4/site-packages/utils/dicts/helpers.py
+venv/lib/python3.4/site-packages/utils/dicts/limited_dict.py
+venv/lib/python3.4/site-packages/utils/enum.py
+venv/lib/python3.4/site-packages/utils/lists.py
+venv/lib/python3.4/site-packages/utils/math.py
+venv/lib/python3.4/site-packages/utils/objects.py
