--- a/.gitignore
+++ b/.gitignore
@@ -3005,3 +3005,4 @@ venv/lib/python3.4/site-packages/utils/enum.py
 venv/lib/python3.4/site-packages/utils/lists.py
 venv/lib/python3.4/site-packages/utils/math.py
 venv/lib/python3.4/site-packages/utils/objects.py
+harry_potter_logistic_regression/whatever.py
